# QrcodeGenerator

./: .gitignore  README.md  qrCode.py
backend/: README.md  main.py  models.py  pyproject.toml  qrcode_utils.py  requirements-render.txt  requirements.txt
backend/tests/: __init__.py  conftest.py  test_api.py  test_performance.py  test_qrcode_utils.py
frontend/: index.html  script.js  style.css
